--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
               <a href="chicken.html">
-               <br class="visible-xs"> Chicken</a>
+               <br class="visible-xs"> CHICKEN</a>
             </li>
             <li>
               <a href="beef.html">
